# csc299-project

./: README.md  SUMMARY.md  pyproject.toml  video.txt
data/: tasks.json
src/: cli.py  storage.py
src/commands/: add.py  list.py  search.py
tasks3/: pyproject.toml  tasks3_db.json
tasks3/src/tasks3/: __init__.py
tasks3/tests/: test_inc.py  test_tasks.py
tasks4/: README.md
tasks4/src/tasks4/: __init__.py
tasks5/: pyproject.toml
tasks5/.specify/: plan.md  spec.md
tasks5/.specify/tasks/: todo.md
tasks5/src/tasks5/: __init__.py
tasks5/tests/: test_tasks.py
tests/: test_tasks.py
